--- a/data/rest_config.yaml
+++ b/data/rest_config.yaml
@@ -4,6 +4,7 @@ hsl:
   url: 'https://api.digitransit.fi/routing/v1/routers/hsl/index/graphql'
   headers:
     Content-Type: 'application/json'
+    digitransit-subscription-key: '2831bba607f4496795101a9a0d693322'
   body:
     query: '{{stop_type}(id: {stop_id}){name,stoptimesWithoutPatterns{serviceDay,scheduledArrival,realtimeArrival,serviceDay, trip{route{shortName}},headsign}}}'
 
@@ -13,7 +14,7 @@ telegram_send_message_HSL_1000103:
   headers:
     Content-Type: "application/json"
   body:
-    chat_id:  # Chat ID for users chat with bot ... I hope in future these are stored automatically to database.
+    chat_id: '203372168'  # Chat ID for users chat with bot ... I hope in future these are stored automatically to database.
     text: '{message}'
 
 telegram_send_message_HSL_2000109:
@@ -22,7 +23,7 @@ telegram_send_message_HSL_2000109:
   headers:
     Content-Type: "application/json"
   body:
-    chat_id: # Chat ID for users chat with bot ... I hope in future these are stored automatically to database.
+    chat_id: '203372168'  # Chat ID for users chat with bot ... I hope in future these are stored automatically to database.
     text: '{message}'
 
 telegram_get_updates:
