--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,6 @@ services:
 #    ports:
 #      - 8123:8123/tcp
 
-#    volumes:
-#      - my-departures:/data/:rw
+    volumes:
+      - my-departures:/data/:rw
 #      - /etc/localtime:/etc/localtime:ro
