--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,5 +16,9 @@ services:
 #      - 8123:8123/tcp
 
     volumes:
-      - mydepartures:/data
+      - my-departures:/data:rw
       - /etc/localtime:/etc/localtime:ro
+
+volumes:
+  my-departures:
+    external: true
