--- a/data/rest_config.yaml
+++ b/data/rest_config.yaml
@@ -26,6 +26,24 @@ telegram_send_message_HSL_2000109:
     chat_id: '203372168'  # Chat ID for users chat with bot ... I hope in future these are stored automatically to database.
     text: '{message}'
 
+telegram_delete_message_HSL_1000103:
+  method: 'GET'
+  url: "https://api.telegram.org/bot{app_token}/deleteMessage"
+  headers:
+    Content-Type: "application/json"
+  body:
+    chat_id: '{chat_id}'  # Chat ID for users chat with bot ... I hope in future these are stored automatically to database.
+    message_id: '{message_id}'
+
+telegram_delete_message_HSL_2000109:
+  method: 'GET'
+  url: "https://api.telegram.org/bot{app_token}/deleteMessage"
+  headers:
+    Content-Type: "application/json"
+  body:
+    chat_id: '{chat_id}'  # Chat ID for users chat with bot ... I hope in future these are stored automatically to database.
+    message_id: '{message_id}'
+
 telegram_get_updates:
   method: 'GET'
   url: "https://api.telegram.org/bot{token}/getUpdates"
