--- a/data/config.yaml
+++ b/data/config.yaml
@@ -19,3 +19,5 @@ update_frequency: 60  # How ofter new departures is requested from HSL.
 
 # Other settings
 logging_level: INFO  # Logs are stored in folder "logs/"
+
+virtual_environment: True  # If True 
