--- a/data/rest_config.yaml
+++ b/data/rest_config.yaml
@@ -6,7 +6,7 @@ hsl:
     Content-Type: 'application/json'
     digitransit-subscription-key: '2831bba607f4496795101a9a0d693322'
   body:
-    query: '{{stop_type}(id: {stop_id}){name,stoptimesWithoutPatterns{serviceDay,scheduledArrival,realtimeArrival,serviceDay, trip{route{shortName}},headsign}}}'
+    query: '{{stop_type}(id: {stop_id_hsl}){name,stoptimesWithoutPatterns{serviceDay,scheduledArrival,realtimeArrival,serviceDay, trip{route{shortName}},headsign}}}'
 
 telegram_send_message_HSL_1000103:
   method: 'GET'
