--- a/data/rest_config.yaml
+++ b/data/rest_config.yaml
@@ -4,38 +4,20 @@ hsl:
   url: 'https://api.digitransit.fi/routing/v1/routers/hsl/index/graphql'
   headers:
     Content-Type: 'application/json'
-    digitransit-subscription-key: '2831bba607f4496795101a9a0d693322'
+    digitransit-subscription-key: '{digitransit-subscription-key}'
   body:
-    query: '{{stop_type}(id: {stop_id_hsl}){name,stoptimesWithoutPatterns{serviceDay,scheduledArrival,realtimeArrival,serviceDay, trip{route{shortName}},headsign}}}'
+    query: '{{stop_type}(id: {stop_id_hsl}){name,stoptimesWithoutPatterns(numberOfDepartures: 10){serviceDay,scheduledArrival,realtimeArrival,serviceDay, trip{route{shortName}},headsign}}}'
 
-telegram_send_message_HSL_1000103:
+telegram_send_message:
   method: 'GET'
   url: "https://api.telegram.org/bot{app_token}/sendMessage"
-  headers:
-    Content-Type: "application/json"
-  body:
-    chat_id: '203372168'  # Chat ID for users chat with bot ... I hope in future these are stored automatically to database.
-    text: '{message}'
-
-telegram_send_message_HSL_2000109:
-  method: 'GET'
-  url: "https://api.telegram.org/bot{app_token}/sendMessage"
-  headers:
-    Content-Type: "application/json"
-  body:
-    chat_id: '203372168'  # Chat ID for users chat with bot ... I hope in future these are stored automatically to database.
-    text: '{message}'
-
-telegram_delete_message_HSL_1000103:
-  method: 'GET'
-  url: "https://api.telegram.org/bot{app_token}/deleteMessage"
   headers:
     Content-Type: "application/json"
   body:
     chat_id: '{chat_id}'  # Chat ID for users chat with bot ... I hope in future these are stored automatically to database.
-    message_id: '{message_id}'
+    text: '{message}'
 
-telegram_delete_message_HSL_2000109:
+telegram_delete_message:
   method: 'GET'
   url: "https://api.telegram.org/bot{app_token}/deleteMessage"
   headers:
